# llm-from-scratch

./: README.md  pyproject.toml
notebooks/: chapter-01-what-we-are-actually-building.ipynb  chapter-02-from-text-to-training-examples-and-generation.ipynb  chapter-03-clear-notebooks-visible-data-and-no-magic.ipynb  chapter-04-text-as-data-strings-characters-and-finite-sequences.ipynb  chapter-05-reading-text-files-and-inspecting-a-corpus.ipynb  chapter-06-cleaning-text-without-over-cleaning.ipynb  chapter-07-character-level-tokenization.ipynb  chapter-08-word-level-tokenization.ipynb  chapter-09-why-subword-tokenization-exists.ipynb  chapter-10-building-input-target-examples-from-token-sequences.ipynb  chapter-11-uniform-random-text-generation.ipynb  chapter-12-unigram-model-overall-frequency.ipynb  chapter-13-bigram-model-one-previous-token.ipynb  chapter-14-bigram-counts-as-a-table.ipynb  chapter-15-turning-bigram-counts-into-probabilities.ipynb  chapter-16-smoothing-avoiding-overconfident-zero-probabilities.ipynb  chapter-17-trigram-models-using-two-previous-tokens.ipynb  chapter-18-general-n-gram-models.ipynb  chapter-19-generating-text-from-n-gram-models.ipynb  chapter-20-what-it-means-for-a-prediction-to-be-good.ipynb  chapter-21-negative-log-loss.ipynb  chapter-22-average-loss-over-a-dataset.ipynb  chapter-23-train-validation-and-test-splits.ipynb  chapter-24-perplexity.ipynb  chapter-25-vectors-as-lists-of-numbers.ipynb  chapter-26-matrices-as-tables-of-numbers.ipynb  chapter-27-matrix-multiplication.ipynb  chapter-28-tensors-and-batch-shapes.ipynb  chapter-29-numpy-arrays.ipynb  chapter-30-random-numbers-and-reproducibility.ipynb  chapter-31-parameters-numbers-the-model-learns.ipynb  chapter-32-derivatives-as-directional-information.ipynb  chapter-33-gradient-descent-with-one-parameter.ipynb  chapter-34-gradient-descent-with-multiple-parameters.ipynb  chapter-35-the-chain-rule-in-computation.ipynb  (+61 more)
