[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Experiments and notebooks for learning how language models work."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["matplotlib>=3.10,<4"]

[dependency-groups]
dev = [
    "ipykernel>=6.29,<7",
    "mypy>=1.15,<2",
    "nbmake>=1.5,<2",
    "nbqa>=1.9,<2",
    "pre-commit>=4.0,<5",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["notebook_outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["notebook_outputs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
