[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Experiments and notebooks for learning how language models work."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10,<4",
    "numpy>=1.26,<2",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.3,<5",
    "mypy==1.15.0",
    "nbconvert>=7.16,<8",
    "nbmake>=1.5,<2",
    "nbqa>=1.9,<2",
    "pre-commit>=4.0,<5",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["notebook_outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["notebook_outputs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
